--- a/css/styles.css
+++ b/css/styles.css
@@ -66,8 +66,24 @@ a {
       hsla(277, 51%, 42%, 0.5),
       hsla(277, 64%, 61%, 0.5)
     ),
-    url("../images/image-header-desktop.jpg") no-repeat top center/cover;
+    url("../images/image-header-mobile.jpg") no-repeat top center/cover;
   height: 19rem;
+}
+
+@media screen and (min-resolution: 192dpi) and (min-width: 1120px),
+  screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1120px),
+  screen and (min-width: 1120px) {
+  .card-img {
+    order: 1;
+    object-fit: cover;
+    background: linear-gradient(
+        to bottom,
+        hsla(277, 51%, 42%, 0.5),
+        hsla(277, 64%, 61%, 0.5)
+      ),
+      url("../images/image-header-desktop.jpg") no-repeat top center/cover;
+    height: 19rem;
+  }
 }
 
 .card-info {
